Non-hacky fix to select box issue
- also fixes formatting on addresses in buy flow
- removes button styling on price and "can't ship here" because the text
overflowed the button

--- a/css/obBase.css
+++ b/css/obBase.css
@@ -2842,7 +2842,7 @@ input[type="number"].fieldItem.fieldItem-withButton {
 }
 
 .fieldItem .fieldItem-selectWrapper {
-  position: relative;
+  position: absolute;
 }
 
 .fieldItem .fieldItem-selectWrapper select {
